--- a/lib/CpMultiplane/modules/Multiplane/themes/mpdocs/assets/css/_mpdocs.scss
+++ b/lib/CpMultiplane/modules/Multiplane/themes/mpdocs/assets/css/_mpdocs.scss
@@ -272,7 +272,7 @@ pre {
     }
 }
 
-.search-entries {
+.search-entries, .excerpt {
     box-shadow: -2px 2px 4px $color-shadow;
     padding: 1em;
     margin: 1em 0;
@@ -284,5 +284,22 @@ pre {
         &:after, &:before {
             content: ' • ';
         }
+    }
+}
+
+a.button {
+    width: auto;
+    margin: .1rem auto;
+    padding: .2rem .5rem;
+    font-size: 1rem;
+    color: $color-white;
+    background-color: $color-link;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    //@include box-shadow(0px -2px 0px $color-black-transp-light inset);
+    &:hover, &:focus {
+        background-color: $color-link-hover;
+        color: $color-black;
     }
 }
