--- a/lib/CpMultiplane/modules/Multiplane/themes/mpdocs/assets/css/_mpdocs.scss
+++ b/lib/CpMultiplane/modules/Multiplane/themes/mpdocs/assets/css/_mpdocs.scss
@@ -74,14 +74,14 @@ body {
 }
 
 main {
-    padding: 2em;
+    padding: 1em 2em 2em;
     background-color: #fff;
 
     @include breakpoint(medium) {
         margin-left: $sidebar_width;
     }
     @include breakpoint(xlarge) {
-        padding-right: 10em;
+        padding-right: $sidebar_width;
     }
 
     img {
@@ -108,6 +108,12 @@ nav {
 
     ul ul {
         padding-bottom: 0;
+    }
+
+    .active {
+        color: #fff;
+        background: rgba(0,0,0,0.8);
+        border-radius: 2px;
     }
 
     &.language-switch {
@@ -203,7 +209,36 @@ nav {
             > ul {
                 margin: 0;
             }
+
+            // move toc to the right
+            @include breakpoint(xlarge) {
+                position: fixed !important;
+                top: 0;
+                right: 0;
+                width: calc(#{$sidebar_width} - 2em);
+                border: none;
+                padding: 1em 0 1em .5em;
+                margin: 0;
+                border-left: 1px dashed #ccc;
+                border-bottom: 1px dashed #ccc;
+                border-bottom-left-radius: .5em;
+                ul {
+                    background: none;
+                }
+                a {
+                    color: #222;
+                }
+                input[type="checkbox"] + label {
+                    background: #fff;
+                }
+                > input[type="checkbox"] + label {
+                    top: .5em;
+                    right: .5em;
+                }
+            }
+
         }
+
     }
 }
 
@@ -260,12 +295,30 @@ pre {
 }
 
 .posts-meta {
+    display: block;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: .25em;
+    margin-bottom: .25em;
     font-size: .9em;
+
+    text-align: center;
+    @include breakpoint(small) {
+        text-align: left;
+    }
+    @include breakpoint(medium) {
+        text-align: right;
+    }
+
+    nav.breadcrumbs {
+        @include breakpoint(medium) {
+            display: inline-block;
+            + span:before {
+                content: ' • ';
+            }
+        }
+    }
     > span + span:before {
         content: ' • ';
-    }
-    @include breakpoint(large) {
-        float: right;
     }
     + h1 {
         margin-top: 0;
@@ -275,7 +328,31 @@ pre {
 .search-entries, .excerpt {
     box-shadow: -2px 2px 4px $color-shadow;
     padding: 1em;
-    margin: 1em 0;
+    margin: 0;
+    + .search-entries, + .excerpt {
+        margin-top: 1em;
+    }
+}
+.search-entries {
+    .posts-meta {
+        display: inline-block;
+        text-align: left;
+        border: none;
+    }
+}
+
+.search-extended {
+    @include breakpoint(medium) {
+        text-align: left;
+    }
+}
+
+.search-entries-header {
+    border-bottom: 1px solid $color-shadow;
+    .heading {
+        font-weight: bolder;
+        margin-right: 2em;
+    }
 }
 
 // quick fix - add separators between footer nav, copyright and login link
@@ -288,6 +365,7 @@ pre {
 }
 
 a.button {
+    display: inline-block;
     width: auto;
     margin: .1rem auto;
     padding: .2rem .5rem;
@@ -297,9 +375,100 @@ a.button {
     border: none;
     border-radius: 2px;
     cursor: pointer;
+    white-space: nowrap;
     //@include box-shadow(0px -2px 0px $color-black-transp-light inset);
     &:hover, &:focus {
         background-color: $color-link-hover;
         color: $color-black;
+    }
+}
+
+[class^="icon-"] {
+    border-radius: 2px;
+}
+
+#sidebar_toggle {
+
+    display: none;
+    + label {
+        display: none;
+    }
+
+    @include breakpoint(medium) {
+        display: block;
+        position: absolute;
+        top: .5em;
+        left: $sidebar_width;
+        margin: 0 0 0 -.5em;
+
+        + label {
+            display: block;
+            position: fixed;
+            top: .5em;
+            z-index: 1;
+            left: $sidebar_width;
+            margin: 0 0 0 -.5em;
+            width: 1em;
+            height: 1em;
+
+            &:before {
+                width: 1em;
+                height: 1em;
+                left: auto;
+                right: 0;
+                margin: 0;
+                top: 0;
+                background-color: $color-white-transp;
+            }
+            &:after {
+                content: '';
+                display: block;
+                border-color: transparent #222 transparent transparent;
+                border-width: .4em;
+                border-style: solid;
+                position: absolute;
+                right: .5em;
+                top: .1em;
+                left: auto;
+            }
+        }
+
+        &:checked {
+            left: 1em;
+            + label {
+                left: 1em;
+                &:after {
+                    content: '';
+                    display: block;
+                    border-color: transparent transparent transparent #222;
+                    border-width: .4em;
+                    border-style: solid;
+                    position: absolute;
+                    right: auto;
+                    top: .1em;
+                    left: .5em;
+                    width: 0;
+                    height: 0;
+                    margin: 0;
+                    background: transparent;
+                }
+                + header {
+                    width: 1em;
+                    overflow: hidden;
+                    padding: 0;
+
+                    > * {
+                        display: none;
+                    }
+
+                    + main {
+                        margin-left: 1em;
+                        + footer {
+                            margin-left: 1em;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
